Fixed some layout issues and added prototype for i18n support

--- a/src/scss/widget/_widget-theme.scss
+++ b/src/scss/widget/_widget-theme.scss
@@ -1,7 +1,3 @@
-.kw-header {
-   height: 40px;
-}
-
 .kw-wrapper {
    position: absolute;
    top: 0;
@@ -131,7 +127,7 @@
 }
 
 i.kw-expand-icon {
-   font-size: 20px;
+   font-size: 25px;
    @include transform(rotate(0deg));
    @include align-self(flex-end);
    color: #878787;
